--- a/CryptoProject/App.config
+++ b/CryptoProject/App.config
@@ -3,4 +3,19 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+	<system.diagnostics>
+		<sources>
+			<source name="System.ServiceModel"
+					switchValue="All"
+					propagateActivity="true">
+				<listeners>
+					<add name="traceListener"
+						type="System.Diagnostics.XmlWriterTraceListener"
+						initializeData= "D:\AppLogs\Traces.svclog" />
+				</listeners>
+			</source>
+		</sources>
+	</system.diagnostics>
+	
 </configuration>
