--- a/LocalDatabase/LocalDatabase.csproj
+++ b/LocalDatabase/LocalDatabase.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="CallbackClient.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Encryption.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WCFClient.cs" />
