--- a/LocalDBase/LocalDBase.csproj
+++ b/LocalDBase/LocalDBase.csproj
@@ -56,6 +56,10 @@
       <Project>{A00551C2-891B-4166-89CE-E21CA53BCFBE}</Project>
       <Name>Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CryptoProject\CentralDatabase.csproj">
+      <Project>{7B1CFFEA-52F0-4646-B35B-0AF5C178E4F9}</Project>
+      <Name>CentralDatabase</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LocalDatabase\Client.csproj">
       <Project>{7C8C2963-6D98-4533-8935-03A448C98746}</Project>
       <Name>Client</Name>
