--- a/LocalDBase/LocalDBase.csproj
+++ b/LocalDBase/LocalDBase.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WCFLocalDB.cs" />
+    <Compile Include="WCFLocalDBService.cs" />
     <Compile Include="XmlHandler.cs" />
   </ItemGroup>
   <ItemGroup>
