--- a/LocalDBase/LocalDBase.csproj
+++ b/LocalDBase/LocalDBase.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="proxyCaller.cs" />
     <Compile Include="WCFLocalDB.cs" />
     <Compile Include="WCFLocalDBService.cs" />
     <Compile Include="XmlHandler.cs" />
