--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Encryption.cs" />
     <Compile Include="IDatabaseCallback.cs" />
     <Compile Include="IDatabaseService.cs" />
     <Compile Include="LogEntity.cs" />
