--- a/LocalDBase/LocalDBase.csproj
+++ b/LocalDBase/LocalDBase.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -67,6 +68,10 @@
     <ProjectReference Include="..\LocalDatabase\Client.csproj">
       <Project>{7C8C2963-6D98-4533-8935-03A448C98746}</Project>
       <Name>Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SecurityManager\SecurityManager.csproj">
+      <Project>{BF0DAF34-5404-43B6-984B-4B7B103D466D}</Project>
+      <Name>SecurityManager</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
