--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Encryption.cs" />
+    <Compile Include="IBackupServer.cs" />
     <Compile Include="IDatabaseCallback.cs" />
     <Compile Include="IDatabaseService.cs" />
     <Compile Include="LogEntity.cs" />
