--- a/CryptoProject/CentralDatabase.csproj
+++ b/CryptoProject/CentralDatabase.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WCFBackupClient.cs" />
     <Compile Include="WCFServer.cs" />
     <Compile Include="XmlHandler.cs" />
   </ItemGroup>
