Certificates / Zavrsen Projekat...

--- a/CryptoProject/CentralDatabase.csproj
+++ b/CryptoProject/CentralDatabase.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -57,6 +58,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CertificationManager\CertificationManager.csproj">
+      <Project>{01C67043-95C4-4059-9522-4C8A13CFE2F7}</Project>
+      <Name>CertificationManager</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{a00551c2-891b-4166-89ce-e21ca53bcfbe}</Project>
       <Name>Common</Name>
